[package]
name = "chip8"
version = "0.1.0"
authors = ["Charith Ellawala <charith.ellawala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#piston = "0.49.0"
#piston2d-graphics = "0.36.0"
#piston_window = "0.108.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
tui = "0.9"
termion = "1.5"
crossbeam-channel = "0.4.2"
rand = "0.7.3"
