[package]
name = "chip8"
version = "0.1.0"
authors = ["Charith Ellawala <charith.ellawala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
tui = "0.9"
termion = "1.5"
crossbeam-channel = "0.4.2"
rand = "0.7.3"
piston_window = "0.109.0"
